--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
     max-width: 1470px;
     margin: 0 auto;
     padding: 0 15px;
-    border: 1px solid green;
+    border: 1px solid transparent; 
 } 
  
 
@@ -50,7 +50,7 @@ body {
             left: 0;
             width: 45px;
             height: 3px;
-            background-color: #000;
+            background-color: #FFF;
             transform: rotate(0);
             transition: all 0.5s;
         }
@@ -88,10 +88,10 @@ body {
 
     }
 
-    .menu__link {
+    .menu__link, 
+    .menu__link-dropdown {
         color: #FFF;
         font-size: 15px; 
-        
     }  
      
     .menu__item--dropdown {
@@ -107,10 +107,11 @@ body {
         position: absolute;
         top: 100%;
         left: 0;  
-        width: 150px;
+        width: 190px;
         background-color: #CA1212; 
         box-shadow: 0 8px 16px rgba(0,0,0,0.2); 
-        display: none; 
+        display: none;   
+        padding: 9px 0;
     } 
      
     .dropdown-decor{ 
@@ -120,7 +121,8 @@ body {
     }
     
     .dropdown__item {
-        width: 100%;
+        width: 100%; 
+        padding: 7px 18px;
     }
     
     .dropdown__link {
@@ -198,4 +200,103 @@ body {
         position: absolute;
         top: 5px;
         left: 48px;
+    } 
+     
+    /* responsive */
+     
+    @media(max-width:1389px) {   
+         
+        .header__inner{ 
+            display: flex; 
+            justify-content: space-between;
+        }
+         
+        .menu {
+            margin-left: 0; 
+        }  
+         
+        .header__search-wrapper { 
+            margin-left: 0;
+        }
+         
+    } 
+     
+    @media(max-width:1248px) {   
+         
+        .header__inner {
+            padding: 13px 0; 
+        }
+
+    } 
+     
+    @media(max-width:1015px) {   
+         
+        .header .menu .menu__list {
+            display: block;
+            position: absolute;
+            top: -500px;
+            left: 0;
+            right: 0; 
+            background-color: #CA1212;
+            text-align: center;
+            padding: 20px 0;
+            z-index: 50;  
+            transition: 0.5s linear;
+        }  
+         
+        .header .menu .menu__list.menu__list--active{ 
+            position: absolute;
+            top: 107px;
+            left: 0;
+            right: 0; 
+        }
+         
+        .menu__item +.menu__item {
+            margin-left: 0;
+        } 
+         
+        .menu__item{ 
+            padding: 7px 0;
+        } 
+         
+        .dropdown {
+            width: 100%
+        } 
+         
+        .menu__item--wrapper{ 
+            position: relative; 
+            width: 70px; 
+            margin: 0 auto;
+        } 
+         
+        .dropdown-decor {
+            position: absolute;
+            top: 7px;
+            right: -5px;
+        } 
+         
+        .header {
+           margin-bottom: 10px; 
+        } 
+         
+        .menu__btn { 
+            display: block;
+        } 
+         
+        .container {
+           overflow: hidden; 
+        } 
+         
+        .menu{ 
+            order:1;
+        } 
+         
+    } 
+     
+    @media(max-width:430px) {   
+
+        .header__search-wrapper{ 
+            display: none;
+        } 
+
     }
